# argus

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/argus/: __init__.py  config.py  main.py
backend/argus/agents/: __init__.py  committee.py  data_test.py  llm.py  llm_test.py
backend/argus/analysis/: __init__.py  flow.py  indicators.py  news.py  screener.py
backend/argus/markets/: __init__.py  base.py  cn.py  hk.py  popular.py  registry.py  us.py
backend/argus/routes/: __init__.py  analysis.py  committee.py  market.py  screener.py  settings.py  system.py  watchlist.py  ws.py
backend/argus/storage/: __init__.py  db.py  secrets.py
backend/argus/utils/: __init__.py  cache.py  logging.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_committee.py  test_data_smoke.py  test_flow.py  test_news_fallback.py  test_smoke.py  test_smoke_test.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/charts/: IndicatorChart.tsx  PriceChart.tsx
frontend/src/components/committee/: AgentCard.tsx  CommitteePanel.tsx
frontend/src/lib/: clean.ts  cn.ts  committee-export.ts  committee-store.ts  history.ts  i18n.tsx  share.ts  theme.tsx
frontend/src/pages/: Dashboard.tsx  History.tsx  Screener.tsx  Settings.tsx  Stock.tsx  Watchlist.tsx
frontend/src/styles/: globals.css
(+10 files in other folders)
